<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/photo_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/image_view_more"
        app:layout_constraintStart_toEndOf="@id/image_view_user"
        app:layout_constraintTop_toTopOf="@id/image_view_user"
        tools:text="User A" />

    <ImageView
        android:id="@+id/image_globe"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/icon_globe"
        android:src="@drawable/ic_language"
        android:tint="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="@id/text_view_time"
        app:layout_constraintStart_toEndOf="@id/text_view_time"
        app:layout_constraintTop_toTopOf="@id/text_view_time" />

    <ImageView
        android:id="@+id/image_view_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/icon_more"
        android:src="@drawable/ic_more_horiz"
        android:tint="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_user" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/time_post_ago"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="@id/image_view_user"
        app:layout_constraintStart_toEndOf="@id/image_view_user" />

    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="2dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@id/image_view_more"
        app:layout_constraintStart_toStartOf="@id/image_view_user"
        app:layout_constraintTop_toBottomOf="@id/text_view_time"
        tools:text="@string/text_test" />

    <ImageView
        android:id="@+id/image_view_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_post"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_content"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:id="@+id/post_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/lighterGray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_post">

        <TextView
            android:id="@+id/text_view_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:text="BLOG.COM.GOOGLE" />

        <TextView
            android:id="@+id/text_view_post_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/text_test" />

    </LinearLayout>

    <Button
        android:id="@+id/button_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_like"
        android:text="@string/button_like"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button_comment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_container" />

    <Button
        android:id="@+id/button_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_comment"
        android:drawablePadding="8dp"
        android:text="@string/button_comment"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/button_share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_like"
        app:layout_constraintTop_toBottomOf="@id/post_container" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="8dp"
        android:text="@string/button_share"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_comment"
        app:layout_constraintTop_toBottomOf="@id/post_container" />

</androidx.constraintlayout.widget.ConstraintLayout>